--- a/_data/devices/m8d.yml
+++ b/_data/devices/m8d.yml
@@ -20,6 +20,8 @@ kernel: android_kernel_htc_msm8974
 maintainers: []
 name: One (M8) Dual SIM
 network: [2G GSM, 3G UMTS, 4G LTE]
+note_content: LineageOS 18.1 builds for this device should be treated as beta releases at the moment, mainly due to Lineage Recovery not booting for an unknown reason.
+note_title: Hardware Support
 peripherals: [Dual front speakers, Accelerometer, Gyroscope, Proximity sensor, Compass, GPS, Hall effect sensor, NFC, IR blaster]
 ram: 2 GB
 recovery_boot: With the device powered off, hold <kbd>Volume Down</kbd> + <kbd>Power</kbd> until the bootloader appears, then release the buttons.
