--- a/_data/devices/charlotte.yml
+++ b/_data/devices/charlotte.yml
@@ -17,10 +17,12 @@ image: charlotte.png
 install_method: fastboot_huawei
 is_unlockable: false
 kernel: {repo: android_kernel_huawei_kirin970, version: '4.9'}
-maintainers: []
+maintainers: [npjohnson]
 models: [CLT-AL00, CLT-AL01, CLT-L04, CLT-L09, CLT-L29, CLT-TL00, CLT-TL01]
 name: P20 Pro
 network: [2G GSM, 3G UMTS, 4G LTE]
+note_content: These builds rely on the kernel currently installed on the device as opposed to a source built one, this was done to maintian compatibllity with variants who have no funcitonal Pie-based kernel source (eg. BKL-L04). Please ensure your device is on a Pie based EMUI firmware before proceeding.
+note_title: Prebuilt Kernel
 peripherals: [Accelerometer, Compass, Fingerprint reader, GPS, Gyroscope, Proximity sensor]
 ram: 6/8 GB
 recovery_boot: With the device powered off, hold <kbd>Volume Down</kbd> + <kbd>Power</kbd>.
