--- a/_data/devices/berkeley.yml
+++ b/_data/devices/berkeley.yml
@@ -17,10 +17,12 @@ image: berkeley.png
 install_method: fastboot_huawei
 is_unlockable: false
 kernel: android_kernel_huawei_kirin970
-maintainers: []
+maintainers: [npjohnson]
 models: [BKL-AL00, BKL-AL10, BKL-AL20, BKL-L09, BKL-TL10, BKL-TL20]
 name: Honor View 10
 network: [2G GSM, 3G UMTS, 4G LTE]
+note_content: These builds rely on the kernel currently installed on the device as opposed to a source built one, this was done to maintian compatibllity with variants who have no funcitonal Pie-based kernel source (eg. BKL-L04). Please ensure your device is on a Pie based EMUI firmware before proceeding.
+note_title: Prebuilt Kernel
 peripherals: [Fingerprint reader, Accelerometer, Gyroscope, Proximity sensor, Compass, GPS]
 ram: 4/6 GB
 recovery_boot: With the device powered off, hold <kbd>Volume Down</kbd> + <kbd>Power</kbd>.
