--- a/_data/devices/foster.yml
+++ b/_data/devices/foster.yml
@@ -7,7 +7,7 @@ codename: foster
 cpu: Cortex-A57
 cpu_cores: '4'
 cpu_freq: 1.9 GHz
-current_branch: 18.1
+current_branch: 19.1
 dimensions: None
 gpu: NVIDIA GM20B (Maxwell)
 image: foster.png
@@ -31,5 +31,5 @@ tree: android_device_nvidia_foster
 type: Set top box
 vendor: NVIDIA
 vendor_short: nvidia
-versions: [14.1, 15.1, 17.1, 18.1]
+versions: [14.1, 15.1, 17.1, 18.1, 19.1]
 wifi: 802.11ac 2x2 Mimo 2.4 GHz and 5 GHz
