--- a/_data/devices/cheryl.yml
+++ b/_data/devices/cheryl.yml
@@ -9,7 +9,7 @@ codename: cheryl
 cpu: Kryo 280
 cpu_cores: '8'
 cpu_freq: 4 x 2.45 GHz + 4 x 1.9 GHz
-current_branch: 19.1
+current_branch: 20
 dimensions: {width: '77.7 mm (3.06 in)', height: '158.5 mm (6.24 in)', depth: '8 mm (0.31 in)'}
 download_boot: With the device powered off, hold <kbd>Volume Down</kbd>, then insert a USB cable.
   Keep holding until the word "Download" appears on the screen, then release.
@@ -21,6 +21,8 @@ kernel: android_kernel_razer_msm8998
 maintainers: [mikeioannina, npjohnson]
 name: 'Phone'
 network: [2G GSM, 3G UMTS, 4G LTE]
+note_title: Front Camera Support
+note_content: Due to unknown incompatibilities with proprieatry binaries, the front camera of this device will not work in anything past LineageOS 18.1.
 peripherals: [A-GPS, Accelerometer, Barometer, Compass, Dual front speakers, Fingerprint reader, GLONASS, GPS, Gyroscope, Light sensor, NFC, Pedometer, Proximity sensor, USB OTG, Wi-Fi Display]
 ram: 8 GB
 recovery_boot: With the device powered off, hold <kbd>Volume Up</kbd>, then insert a USB cable.
@@ -33,5 +35,5 @@ tree: android_device_razer_cheryl
 type: phone
 vendor: Razer
 vendor_short: razer
-versions: [16.0, 17.1, 18.1, 19.1]
+versions: [16.0, 17.1, 18.1, 19.1, 20]
 wifi: 802.11 a/b/g/n/ac, Dual-band, WiFi Direct, Hotspot
