--- a/images/favicons/manifest.json
+++ b/images/favicons/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "LineageOS Wiki",
+    "name": "Odd Solutions Wiki",
     "icons": [
         {
             "src": "/images/favicons/android-chrome-192x192.png",
