wiki: devices: Update berlin specifications
Signed-off-by: Andrew Hexen <SyberHexen@gmail.com>
Change-Id: I0748813cb8da2b80632298f5bbdb5f980fde56ac

--- a/_data/devices/berlna.yml
+++ b/_data/devices/berlna.yml
@@ -1,39 +1,39 @@
 architecture: arm64
-battery: {removable: False, capacity: 4000 , tech: 'Li-Po'}
+battery: {removable: False, capacity: 5000 , tech: 'Li-Po'}
 before_install: {instructions: 'needs_specific_android_fw', version: '12'}
 before_lineage_install: ab_copy_partitions
 before_recovery_install: {instructions: 'boot_stack', partitions: [dtbo, vendor_boot]}
 bluetooth: {spec: '5.2', profiles: [A2DP + aptX HD]}
 cameras:
-- {flash: 'LED', info: '108 MP'}
-- {flash: None, info: '8 MP (telephoto)'}
-- {flash: None, info: '16 MP (ultrawide)'}
+- {flash: 'Dual LED (dual tone)', info: '108 MP (wide)'}
+- {flash: 'Dual LED (dual tone)', info: '8 MP (ultrawide)'}
+- {flash: 'Dual LED (dual tone)', info: '2 MP (depth)'}
 - {flash: None, info: '32 MP (wide)'}
-codename: berlin
+codename: berlna
 cpu: Kryo 670
 cpu_cores: '8'
 cpu_freq: 1 x 2.4 GHz + 3 x 2.2 GHz & 4 x 1.9 GHz
 current_branch: 20
-dimensions: {width: '76 mm (2.99 in)', height: '163 mm (6.42 in)', depth: '7 mm (0.28 in)'}
+dimensions: {width: '75.6 mm (2.98 in)', height: '169 mm (6.65 in)', depth: '9 mm (0.35 in)'}
 download_boot: With the device powered off, hold <kbd>Volume Down</kbd> + <kbd>Power</kbd>.
 gpu: Qualcomm Adreno 642L
-image: berlin.png
+image: berlna.png
 install_method: fastboot_motorola
 is_ab_device: true
 kernel: android_kernel_motorola_sm7325
-maintainers: [npjohnson, SGCMarkus]
-models: [XT2143-1]
-name: edge 20
+maintainers: [SyberHexen]
+models: [XT2141-2]
+name: edge 2021
 network: [2G GSM, 2G CDMA, 3G UMTS, 4G LTE, 5G NR]
-peripherals: [A-GPS, Accelerometer, Barometer, Compass, Dual SIM, Fingerprint reader, Galileo, GLONASS, Google Assist Button, GPS, Gyroscope, Light sensor, NFC, Pedometer, Proximity sensor, Sensor hub, USB OTG]
+peripherals: [A-GPS, Accelerometer, Barometer, Compass, Fingerprint reader, Galileo, GLONASS, GPS, Gyroscope, Light sensor, NFC, Pedometer, Proximity sensor, Sensor hub, USB OTG]
 ram: 8 GB LPDDR4X
 recovery_boot: With the device powered off, hold <kbd>Volume Down</kbd> + <kbd>Power</kbd>, then select "Recovery mode" using Volume keys.
 recovery_reboot: fastboot_menu
-release: 2021-07-29
-screen: {size: '170.18 mm (6.7 in)', density: 385, resolution: '1080x2400', technology: 'OLED'}
+release: 2021-08-19
+screen: {size: '172.72 mm (6.8 in)', density: 395, resolution: '1080x2460', technology: 'IPS LCD'}
 soc: Qualcomm SM7325 Snapdragon 778G 5G
-storage: 128 GB UFS 2.2
-tree: android_device_motorola_berlin
+storage: 256 GB UFS 2.2
+tree: android_device_motorola_berlna
 type: phone
 vendor: Motorola
 vendor_short: motorola
