--- a/_data/devices/m8.yml
+++ b/_data/devices/m8.yml
@@ -8,16 +8,18 @@ codename: m8
 cpu: Krait 400
 cpu_cores: '4'
 cpu_freq: 2.3 GHz
-current_branch: 17.1
+current_branch: 18.1
 dimensions: {depth: 9.35, height: 146.36, width: 70.6}
 download_boot: With the device powered off, hold <kbd>Volume Down</kbd> + <kbd>Power</kbd> until the bootloader appears, then release the buttons. Use the volume buttons to scroll to "FASTBOOT" and press <kbd>Power</kbd> to select.
 gpu: Qualcomm Adreno 330
 image: m8.png
 install_method: fastboot_htc
 kernel: {repo: android_kernel_htc_msm8974, version: '3.4'}
-maintainers: []
+maintainers: [bgcngm, npjohnson]
 name: One (M8)
 network: [2G GSM, 3G UMTS, 3G CDMA2000, 4G LTE]
+note_content: LineageOS 18.1 builds for this device should be treated as beta releases at the moment, mainly due to Lineage Recovery not booting for an unknown reason. Additionally, due to partition size limitations, the provided LineageOS builds do not support the Google Play Editions variant or devices on that firmware.
+note_title: Hardware Support
 peripherals: [3.5mm jack, Accelerometer, Compass, GPS, Gyroscope, Hall effect sensor, IR blaster, NFC, Proximity sensor, Stereo front speakers]
 ram: 2 GB
 recovery_boot: With the device powered off, hold <kbd>Volume Down</kbd> + <kbd>Power</kbd> until the bootloader appears, then release the buttons. Use the volume buttons to scroll to "RECOVERY" and press <kbd>Power</kbd> to select.
@@ -32,5 +34,5 @@ type: phone
 uses_twrp: true
 vendor: HTC
 vendor_short: htc
-versions: [14.1, 16.0, 17.1]
+versions: [14.1, 16.0, 17.1, 18.1]
 wifi: 802.11 b/g/n/ac
