--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 output: web
 # this property is useful for conditional filtering of content that is separate from the PDF.
 
-title: LineageOS Wiki
+title: Odd Solutions Wiki
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
-company_name: The LineageOS Project
+company_name: Odd Solutions, LLC
 # this appears in the footer
 
 host: 127.0.0.1
@@ -194,11 +194,11 @@ sass:
   style: :compressed # You might prefer to minify using :compressed
   sourcemap: always
 
-description: "The LineageOS Wiki"
+description: "The Odd Solutions Wiki"
 # the description is used in the feed.xml file
 
 # needed for sitemap.xml file only
-url: https://wiki.lineageos.org
+url: https://wiki.oddsolutions.us
 
 plugins:
   - jekyll-redirect-from
