--- a/_data/devices/jflteatt.yml
+++ b/_data/devices/jflteatt.yml
@@ -17,7 +17,7 @@ gpu: Qualcomm Adreno 320
 image: jflte.png
 install_method: oor
 kernel: {repo: android_kernel_samsung_jf, version: '3.4'}
-maintainers: []
+maintainers: [arco, npjohnson, side]
 models: [SGH-I337]
 name: Galaxy S4 (SGH-I337)
 network: [2G GSM, 2G CDMA, 3G UMTS, 3G CDMA2000, 4G LTE]
