--- a/_data/devices/flox.yml
+++ b/_data/devices/flox.yml
@@ -17,7 +17,7 @@ gpu: Qualcomm Adreno 320
 image: flo.png
 install_method: fastboot_nexus
 kernel: {repo: android_kernel_google_msm, version: '3.4'}
-maintainers: []
+maintainers: [npjohnson]
 name: Nexus 7 2013 (Wi-Fi, Repartitioned)
 needs_fastboot_boot: true
 network: None
