--- a/_data/devices/shamu.yml
+++ b/_data/devices/shamu.yml
@@ -16,7 +16,7 @@ gpu: Qualcomm Adreno 420
 image: shamu.png
 install_method: fastboot_nexus
 kernel: {repo: android_kernel_moto_shamu, version: '3.10'}
-maintainers: []
+maintainers: [Elektroschmock, npjohnson]
 name: Nexus 6
 network: [2G GSM, 2G CDMA, 3G UMTS, 4G LTE]
 peripherals: [3.5mm jack, Accelerometer, Barometer, Compass, Dual front speakers, Gyroscope, Hall effect sensor, NFC, Proximity sensor, Qi wireless charging]
