--- a/_data/devices/h910.yml
+++ b/_data/devices/h910.yml
@@ -19,9 +19,11 @@ gpu: Qualcomm Adreno 530
 image: v20.png
 install_method: fastboot_custom
 kernel: {repo: android_kernel_lge_msm8996, version: '4.4'}
-maintainers: []
+maintainers: [aleasto, AShiningRay, npjohnson, ROMSG, xxseva44, x86cpu]
 name: V20 (AT&T)
 network: [2G GSM, 3G UMTS, 4G LTE]
+note_content: This device is technically unsupported, as the 2nd Quarterly release of Android 14 tore out support for many things this device depends on. As such, one final build is published that is based on the February, 2024 security patch level. There will be no further builds for this device.
+note_title: Device Support
 peripherals: [3.5mm jack, Accelerometer, Barometer, Color spectrum sensor, Compass, Fingerprint reader, GPS, Gyroscope, IR blaster, Light sensor, Mobility DisplayPort (MyDP), NFC, Proximity sensor, USB OTG]
 quirks: [fde, ims]
 ram: 4 GB
