--- a/_data/devices/h990.yml
+++ b/_data/devices/h990.yml
@@ -18,9 +18,11 @@ gpu: Qualcomm Adreno 530
 image: v20.png
 install_method: fastboot_custom
 kernel: {repo: android_kernel_lge_msm8996, version: '4.4'}
-maintainers: []
+maintainers: [aleasto, AShiningRay, npjohnson, ROMSG, xxseva44, x86cpu]
 name: V20 (Global)
 network: [2G GSM, 3G UMTS, 4G LTE]
+note_content: This device is technically unsupported, as the 2nd Quarterly release of Android 14 tore out support for many things this device depends on. As such, this device gets monthly builds with device-specific fixes still, but they are built based on the February, 2024 security patch level.
+note_title: Device Support
 peripherals: [3.5mm jack, Accelerometer, Barometer, Color spectrum sensor, Compass, Dual SIM, FM radio, Fingerprint reader, GPS, Gyroscope, IR blaster, Light sensor, Mobility DisplayPort (MyDP), NFC, Proximity sensor, USB OTG]
 quirks: [fde, ims]
 ram: 4 GB
